# Sudoku-plus

./: .geminiignore  .gitignore  Cargo.toml  README.md
examples/: plane_sudoku_examples.rs
src/: cubic_sudoku.rs  lib.rs  multi_layer_sudoku.rs  multiplain_sudoku.rs  multiplane_sudoku.rs  plain_sudoku.rs  plane_sudoku.rs  sudoku_element.rs
