[package]
authors = ["PARK Youngho"]
name = "sudoku-plus"
version = "0.1.3"
edition = "2024"
keywords = ["sudoku", "puzzle", "game", "board", "solver"]
categories = ["algorithms", "games", "game-development", "game-engines"]
description = "sudoku-plus is a versatile Rust library designed for generating and solving various Sudoku structures, including Plane, Multi-layer, and Cubic Sudokus."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/piaoyh/Sudoku-plus"

[dependencies]
cryptocol = "0.19.8"
#cryptocol = { path = "/home/youngho/dacha/Cryptocol" }

[profile.dev]
incremental = false

#################################
[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]


[[example]]
name = "plane_sudoku_examples"
doc-scrape-examples = false
